# trendsee

./: .gitignore  README.md  Trendsee.postman_collection.json  docker-compose.yaml
frontend/: index.html  package-lock.json
frontend/src/: App.vue  style.css
frontend/src/features/api/: posts.ts
frontend/src/features/utils/: formatiers.ts
frontend/src/shared/ui/: Modal.vue  Stat.vue  Tag.vue  VideoCard.vue
server/: Dockerfile  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  database.py  dependencies.py  main.py  redis.py  utils.py
server/app/posts/: models.py  router.py  schemas.py
server/app/users/: models.py  router.py  schemas.py
