[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "asyncpg>=0.31.0",
  "authx>=1.5.1",
  "fastapi[standard,standart]>=0.135.1",
  "pydantic-settings>=2.13.1",
  "redis>=7.3.0",
  "sqlalchemy>=2.0.48",
]

[tool.fastapi]
entrypoint = "app.main:app"
